--- a/css/style.css
+++ b/css/style.css
@@ -2499,10 +2499,13 @@ section.content {
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   -ms-border-radius: 2px;
-  padding: 5px 10px 5px 5px;
-  border-radius: 2px;
+  padding: 2px 10px 2px 5px;
+  border-radius: 5px;
   border: none;
-  font-size: 13px;
+  font-family: "Segoe UI", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  letter-spacing: 0.25px;
   transition: 0.5s;
   outline: none; }
   .btn:not(.btn-link):not(.btn-circle):hover {
@@ -4301,19 +4304,19 @@ section.content {
   border: none;
   padding: 25px 25px 5px 25px; }
   .modal .modal-header .modal-title {
-    font-weight: bold;
-    font-size: 16px; }
+    font-weight: 600;
+    font-size: 20px; }
 
 .modal .modal-content {
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -ms-border-radius: 0;
-  border-radius: 0;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.31) !important;
   border: none; }
   .modal .modal-content .modal-body {
     color: #777;
-    padding: 15px 25px; }
+    padding: 2px 25px; }
 
 .modal .modal-footer {
   border: none; }
@@ -7558,7 +7561,7 @@ fieldset[disabled] .form-control {
     padding: 15px;
     overflow: hidden; }
     .sidebar .legal .copyright {
-      font-size: 13px;
+      font-size: 11px;
       white-space: nowrap;
       -ms-text-overflow: ellipsis;
       -o-text-overflow: ellipsis;
@@ -7574,7 +7577,10 @@ fieldset[disabled] .form-control {
       text-overflow: ellipsis;
       overflow: hidden;
       margin-top: 5px;
-      font-size: 13px; }
+      color: #565656;
+      font-size: 10px;
+      letter-spacing: 2px;
+      text-transform: uppercase; }
   .sidebar .user-info {
     padding: 10px 15px 12px 15px;
     white-space: nowrap;
@@ -7636,11 +7642,14 @@ fieldset[disabled] .form-control {
         font-weight: bold; }
       .sidebar .menu .list .header {
         background: #eee;
-        font-size: 12px;
+        font-size: 10px;
         font-weight: 600;
+        letter-spacing: 2px;
+        color: #737373;
         padding: 8px 16px; }
       .sidebar .menu .list i.material-icons {
-        margin-top: 4px; }
+        margin-top: 4px; 
+      }
       .sidebar .menu .list .menu-toggle:after, .sidebar .menu .list .menu-toggle:before {
         position: absolute;
         top: calc(50% - 14px);
@@ -7689,15 +7698,17 @@ fieldset[disabled] .form-control {
         width: 100%;
         padding: 10px 13px; }
         .sidebar .menu .list a:hover, .sidebar .menu .list a:active, .sidebar .menu .list a:focus {
-          text-decoration: none !important; }
+          text-decoration: none !important; 
+          color: #080573;
+        }
         .sidebar .menu .list a small {
           position: absolute;
           top: calc(50% - 7.5px);
           right: 15px; }
         .sidebar .menu .list a span {
           margin: 7px 0 7px 12px;
-          color: #333;
-          font-weight: bold;
+          color: #565656;
+          font-weight: 400;
           font-size: 14px;
           overflow: hidden; }
       .sidebar .menu .list .ml-menu {
@@ -8269,6 +8280,41 @@ html.ie11 .bs-searchbox .form-control {
   font-size: 12px;
   color: #ff6961;
 
+}
+
+.table-subheader{
+  font-size: 20px;
+}
+
+.page-header{
+  font-weight: 600;
+  font-size: 25px;
+  padding-top: 5px;
+  padding-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.page-subheader{
+  color: #565656;
+}
+
+.label-red{
+  width: 100px;
+  text-align: center;
+  padding: 5px;
+  background-color: #fdaaaa;
+  color: #aa4344;
+  border-radius: 5px;
+}
+
+.label-green{
+  width: 100px;
+  text-align: center;
+  padding: 5px;
+  background-color: #d2e7d6;
+  color: #2f4c39;
+  border-radius: 5px;
 }
 
 
