--- a/css/themes/theme-red.css
+++ b/css/themes/theme-red.css
@@ -30,7 +30,7 @@
   .theme-red .sidebar .menu .list li.active {
     background-color: transparent; }
     .theme-red .sidebar .menu .list li.active > :first-child i, .theme-red .sidebar .menu .list li.active > :first-child span {
-      color: #05445e; }
+      color: #080573; }
 
   .theme-red .sidebar .menu .list .toggled {
     background-color: transparent; }
