--- a/pages/assets/css/style.css
+++ b/pages/assets/css/style.css
@@ -222,6 +222,273 @@ a:active{
 
 }
 
+/* Form Wizard ================================= */
+.wizard,
+.tabcontrol {
+  display: block;
+  width: 100%;
+  overflow: hidden; }
+
+.wizard a,
+.tabcontrol a {
+  outline: 0; }
+
+.wizard ul,
+.tabcontrol ul {
+  list-style: none !important;
+  padding: 0;
+  margin: 0; }
+
+.wizard ul > li, .tabcontrol ul > li {
+  display: block;
+  padding: 0; }
+
+/* Accessibility */
+.wizard > .steps .current-info,
+.tabcontrol > .steps .current-info,
+.wizard > .content > .title,
+.tabcontrol > .content > .title {
+  position: absolute;
+  left: -999em; }
+
+.wizard > .steps {
+  position: relative;
+  display: block;
+  width: 100%; }
+
+.wizard.vertical > .steps {
+  float: left;
+  width: 30%; }
+
+.wizard.vertical > .steps > ul > li {
+  float: none;
+  width: 100%; }
+
+.wizard.vertical > .content {
+  float: left;
+  margin: 0 0 0.5em 0;
+  width: 70%; }
+
+.wizard.vertical > .actions {
+  float: right;
+  width: 100%; }
+
+.wizard.vertical > .actions > ul > li {
+  margin: 0 0 0 1em; }
+
+.wizard > .steps .number {
+  font-size: 18px; }
+
+.wizard > .steps > ul > li {
+  width: 25%;
+  float: left; }
+
+.wizard > .actions > ul > li {
+  float: left; }
+
+.wizard > .steps a {
+  display: block;
+  width: auto;
+  margin: 5px;
+  padding: 10px 20px; 
+  text-decoration: none;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  transition: 0.5s;
+  border-radius: 0; }
+  .wizard > .steps a:hover, .wizard > .steps a:active {
+    display: block;
+    width: auto;
+    padding: 1em 1em;
+    text-decoration: none;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 0 !important; }
+
+.wizard > .steps .disabled a {
+  background: #eee;
+  color: #aaa;
+  cursor: default; }
+  .wizard > .steps .disabled a:hover, .wizard > .steps .disabled a:active {
+    background: #eee;
+    color: #aaa;
+    cursor: default; }
+
+.wizard > .steps .current a {
+  background: #D8A93B !important;
+  color: #fff;
+  cursor: default; }
+  .wizard > .steps .current a:hover, .wizard > .steps .current a:active {
+    background: #D8A93B;
+    color: #fff;
+    cursor: default; 
+    border-radius: 0;
+}
+
+.wizard > .steps .done a {
+  background: #9dc8e2;
+  color: #fff; }
+  .wizard > .steps .done a:hover, .wizard > .steps .done a:active {
+    background: #9dc8e2;
+    color: #fff; }
+
+.wizard > .steps .error a {
+  background: #ff3111;
+  color: #fff; }
+  .wizard > .steps .error a:hover, .wizard > .steps .error a:active {
+    background: #ff3111;
+    color: #fff; }
+
+.wizard > .content {
+  border: 0px solid #ddd;
+  display: block;
+  margin: 10px 0px 10px 0px;
+  min-height: 35em;
+  overflow: hidden;
+  position: relative;
+  width: auto; }
+
+.wizard > .actions {
+  position: relative;
+  display: block;
+  text-align: right;
+  width: 100%; }
+
+.wizard > .actions > ul {
+  display: inline-block;
+  text-align: right; }
+  .wizard > .actions > ul > li {
+    margin-left: 10px; }
+
+.wizard > .actions a {
+  background: #0A079D;
+  color: #fff;
+  display: block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  transition: 0.5s;
+  border-radius: 0; }
+  .wizard > .actions a:hover, .wizard > .actions a:active {
+    background: #0F0ADC;
+    color: #fff;
+    display: block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    transition: 0.5s;
+    border-radius: 0; }
+
+.wizard > .actions .disabled a {
+  background: #eee;
+  color: #aaa; }
+  .wizard > .actions .disabled a:hover, .wizard > .actions .disabled a:active {
+    background: #eee;
+    color: #aaa; }
+
+.tabcontrol > .steps {
+  position: relative;
+  display: block;
+  width: 100%; }
+  .tabcontrol > .steps > ul {
+    position: relative;
+    margin: 6px 0 0 0;
+    top: 1px;
+    z-index: 1; }
+    .tabcontrol > .steps > ul > li {
+      float: left;
+      margin: 5px 2px 0 0;
+      padding: 1px;
+      -webkit-border-top-left-radius: 5px;
+      -webkit-border-top-right-radius: 5px;
+      -moz-border-radius-topleft: 5px;
+      -moz-border-radius-topright: 5px;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px; }
+      .tabcontrol > .steps > ul > li:hover {
+        background: #edecec;
+        border: 1px solid #bbb;
+        padding: 0; }
+      .tabcontrol > .steps > ul > li.current {
+        background: #fff;
+        border: 1px solid #bbb;
+        border-bottom: 0 none;
+        padding: 0 0 1px 0;
+        margin-top: 0; }
+        .tabcontrol > .steps > ul > li.current > a {
+          padding: 15px 30px 10px 30px; }
+      .tabcontrol > .steps > ul > li > a {
+        color: #5f5f5f;
+        display: inline-block;
+        border: 0 none;
+        margin: 0;
+        padding: 10px 30px;
+        text-decoration: none; }
+        .tabcontrol > .steps > ul > li > a:hover {
+          text-decoration: none; }
+
+.tabcontrol > .content {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 35em;
+  overflow: hidden;
+  border-top: 1px solid #bbb;
+  padding-top: 20px; }
+  .tabcontrol > .content > .body {
+    float: left;
+    position: absolute;
+    width: 95%;
+    height: 95%;
+    padding: 2.5%; }
+    .tabcontrol > .content > .body ul {
+      list-style: disc !important; }
+      .tabcontrol > .content > .body ul > li {
+        display: list-item; }
+
+.wizard .content {
+  min-height: 245px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  border-radius: 0;
+  overflow-y: auto; }
+  .wizard .content .body {
+    padding: 0px; }
+
+.wizard .steps a {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  border-radius: 0;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s; }
+  .wizard .steps a:active, .wizard .steps a:focus, .wizard .steps a:hover {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    padding: 10px 20px;
+    border-radius: 0px; }
+
+.wizard .steps .done a {
+  background-color: #D1B77D}
+  .wizard .steps .done a:hover, .wizard .steps .done a:active, .wizard .steps .done a:focus {
+    background-color: #D1B77D }
+
+.wizard .steps .error a {
+  background-color: #F44336 !important; }
+
+.wizard .steps .current a {
+  background-color: #009688; }
+  .wizard .steps .current a:active, .wizard .steps .current a:focus, .wizard .steps .current a:hover {
+    background-color: #009688; }
+
 /* Navbar */
 
 .student-navbar-main{
@@ -1885,7 +2152,6 @@ fieldset[disabled] .form-control{
 
 		display: none;
 	}
-
 }
 
 @media only screen and (min-height: 813px){
@@ -1896,4 +2162,5 @@ fieldset[disabled] .form-control{
 		width: 100%;
 
 	}
+
 }
